--- a/phy_ota_sdk/build.gradle
+++ b/phy_ota_sdk/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 apply plugin: 'com.github.dcendents.android-maven'
 
-group='com.github.YourUsername'
+group='com.github.lilongweidev'
 
 android {
     compileSdkVersion 30
