--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //权限请求 支持Androidx
+    implementation 'pub.devrel:easypermissions:3.0.0'
+    //让你的适配器一目了然，告别代码冗余
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
+
 }
